--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,6 @@ spring.jpa.show-sql=true
 
 spring.jpa.hibernate.ddl-auto=update
 logging.level.org.hibernate.SQL=DEBUG
+
+
+spring.pid.fail-on-write-error = true
