--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,14 @@
 			<version>3.0.4.RELEASE</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.9.1</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
