--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,6 @@ logging.level.org.hibernate.SQL=DEBUG
 
 
 spring.pid.fail-on-write-error = true
+
+info.app.name=@project.artifactId@
+info.app.version=@project.version@
