--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,3 +26,4 @@ spring.pid.fail-on-write-error = true
 
 info.app.name=@project.artifactId@
 info.app.version=@project.version@
+info.app.java=@java.version@
