--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,14 @@
 <!--			<version>2.13.3</version>-->
 <!--		</dependency>-->
 
+		<!-- https://mvnrepository.com/artifact/junit/junit -->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.13.2</version>
+			<scope>test</scope>
+		</dependency>
+
 
 
 	</dependencies>
