--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ jobs:
           JDBC_DATABASE_USERNAME: root
           JDBC_DATABASE_PASSWORD: root
 
-      - image: circleci/postgres:9.6.24-bullseye-ram
+      - image: circleci/postgres:13.5-bullseye-postgis-ram
         environment:
           POSTGRES_DB: pecunia_spring
 
