--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ jobs:
           JDBC_DATABASE_USERNAME: postgres
           JDBC_DATABASE_PASSWORD: postgres
 
-      - image: circleci/postgres:13.5-bullseye-postgis-ram
+      - image: circleci/postgres:9.6.5-apline-ram
         environment:
           POSTGRES_DB: pecunia_spring
 
