--- a/src/main/resources/static/reportsChart/reports/my_report.yml
+++ b/src/main/resources/static/reportsChart/reports/my_report.yml
@@ -31,7 +31,7 @@ chart:
         title:
           display: true
           text: 'Liczba Państw'
-          color: 'black'
+          color: 'blue'
           font:
             size: 20
             weight: 'bold'
@@ -40,7 +40,7 @@ chart:
         title:
           display: true
           text: 'Kontynenty'
-          color: 'black'
+          color: 'green'
           font:
             size: 20
             weight: 'bold'
@@ -53,4 +53,4 @@ chart:
       legend:
         display: true
         labels:
-          color: 'black'
+          color: 'red'
