chart testy brak pozytywów

--- a/src/main/resources/static/reportsChart/reports/my_report3.yml
+++ b/src/main/resources/static/reportsChart/reports/my_report3.yml
@@ -12,6 +12,11 @@ chart:
     hover:
       mode: 'index'
     plugins:
+      elements:
+        bar:
+          backgroundColor: colorize(false)
+          borderColor: colorize(true)
+          borderWidth: 5
       legend:
         display: true
         labels:
