--- a/src/main/resources/static/reportsChart/reports/my_report3.yml
+++ b/src/main/resources/static/reportsChart/reports/my_report3.yml
@@ -7,17 +7,17 @@ chart:
     backgroundColor: ['rgb(39, 122, 205, 0.5)', 'rgb(0, 0, 0, 0.5)', 'rgb(243, 248, 98, 0.5)', 'rgb(221, 12, 23, 0.5)', 'rgb(229, 184, 70, 0.5)', 'rgb(30, 201, 27, 0.5)']
     borderWidth: 1
     borderColor: 'black'
-    hoverBackgroundColor: ['rgb(39, 122, 205)', 'rgb(0, 0, 0)', 'rgb(243, 248, 98)', 'rgb(221, 12, 23)', 'rgb(229, 184, 70)', 'rgb(30, 201, 27)']
+    hoverBackgroundColor: ['rgb(39, 122, 205)', 'rgb(0, 0, 0)', 'rgb(243, 248, 98)', 'rgb(221, 12, 23)', 'rgb(229, 184, 70)', 'rgb(30, 201, 27)', 'rgb(30, 201, 27)']
   options:
-    hover:
-      mode: 'index'
-    plugins:
-      elements:
-        bar:
-          backgroundColor: colorize(false)
-          borderColor: colorize(true)
-          borderWidth: 5
-      legend:
-        display: true
-        labels:
-          color: 'red'
+    legend:
+      labels:
+        fontColor: 'red'
+        fontSize: 30
+    title:
+      display: true
+      text: 'Wykres Testowy'
+      fontColor: 'blue'
+      fontSize: 20
+      fontFamily: 'Helvetica Neue'
+    scales:
+      yAxes: ['Panstwa']
