--- a/src/main/resources/static/reportsChart/reports/my_report_continents_test.yml
+++ b/src/main/resources/static/reportsChart/reports/my_report_continents_test.yml
@@ -28,9 +28,9 @@ chart:
 #        Wyświetlanie legeny
         display: true
         labels:
-          color: 'red'
+          color: 'black'
           font:
-            size: 10
+            size: 12
             family: 'Helvetica Neue'
     scales:
       y:
