--- a/src/main/resources/static/reportsChart/reports/my_report_note_currency_country.yml
+++ b/src/main/resources/static/reportsChart/reports/my_report_note_currency_country.yml
@@ -14,7 +14,7 @@ chart:
         color: 'red'
       title:
         display: true
-        text: 'Wykres Estowy'
+        text: 'Wykres Tstowy'
         color: 'blue'
         font:
           weight: 'bold'
@@ -28,7 +28,7 @@ chart:
           size: 30
       legend:
 #        Wyświetlanie legeny
-        display: true
+        display: false
         labels:
           color: 'black'
           font:
