--- a/src/main/resources/static/reportsChart/reports/my_report_coins_composition.yml
+++ b/src/main/resources/static/reportsChart/reports/my_report_coins_composition.yml
@@ -1,9 +1,9 @@
 #CHartJS 3.6.0
 report:
-  name: "my_report_note_currency_country"
+  name: "my_report_coins_composition"
 chart:
   datasets:
-    label: 'Ilość Banknotow w walutach'
+    label: 'Ilość Monet'
     backgroundColor: ['rgb(39, 122, 205, 0.5)', 'rgb(0, 0, 0, 0.5)', 'rgb(243, 248, 98, 0.5)', 'rgb(221, 12, 23, 0.5)', 'rgb(229, 184, 70, 0.5)', 'rgb(30, 201, 27, 0.5)', 'rgb(160, 160, 160, 0.5)']
     borderWidth: 1
     borderColor: 'black'
@@ -14,14 +14,14 @@ chart:
         color: 'red'
       title:
         display: true
-        text: 'Wykres Tstowy'
+        text: 'Wykres Tetowy'
         color: 'blue'
         font:
           weight: 'bold'
           size: 20
       subtitle:
         display: true
-        text: 'Ilość Banknotów'
+        text: 'Ilość Monet'
         color: 'green'
         font:
           weight: 'bold'
@@ -40,7 +40,7 @@ chart:
         beginAtZero: true
         title:
           display: true
-          text: 'Liczba Banknotów'
+          text: 'Liczba Monet'
           color: 'blue'
           font:
             size: 20
@@ -48,7 +48,6 @@ chart:
             lineHeight: 1.2
         ticks:
           color: 'green'
-          stepSize: 1
         grid:
 #          color: 'black'   # Kolor lini siatki 'y'
           tickColor: 'red'
@@ -57,7 +56,7 @@ chart:
       x:
         title:
           display: true
-          text: 'Waluty'
+          text: 'Skład'
           color: 'green'
           font:
             size: 20
