--- a/src/main/resources/static/reportsChart/reports/my_report_notes_bought_country.yml
+++ b/src/main/resources/static/reportsChart/reports/my_report_notes_bought_country.yml
@@ -1,9 +1,9 @@
 #CHartJS 3.6.0
 report:
-  name: "my_report_coins_bought"
+  name: "my_report_notes_bought_country"
 chart:
   datasets:
-    label: 'Ilość Monet'
+    label: 'Ilość Banknotow'
     backgroundColor: ['rgb(39, 122, 205, 0.5)', 'rgb(0, 0, 0, 0.5)', 'rgb(243, 248, 98, 0.5)', 'rgb(221, 12, 23, 0.5)', 'rgb(229, 184, 70, 0.5)', 'rgb(30, 201, 27, 0.5)', 'rgb(160, 160, 160, 0.5)']
     borderWidth: 1
     borderColor: 'black'
@@ -14,14 +14,14 @@ chart:
         color: 'red'
       title:
         display: true
-        text: 'Wykres Tstowy 2024.04.21 '
+        text: 'WYKRES TESTOWY 2024.04.22 '
         color: 'blue'
         font:
           weight: 'bold'
           size: 20
       subtitle:
         display: true
-        text: 'Ilość Monet'
+        text: 'Ilość Banknotów'
         color: 'green'
         font:
           weight: 'bold'
@@ -40,7 +40,7 @@ chart:
         beginAtZero: true
         title:
           display: true
-          text: 'Liczba Monet'
+          text: 'Liczba Banknotów'
           color: 'blue'
           font:
             size: 20
