poprawki dodanie wykresy pokazujacego daodanie minet do bazy danych

--- a/src/main/resources/static/reportsChart/reports/my_report_coins_add.yml
+++ b/src/main/resources/static/reportsChart/reports/my_report_coins_add.yml
@@ -1,3 +1,5 @@
+report:
+  name: "my_report_coins_bought"
 chart:
   datasets:
     label: 'Ilość Monet'
@@ -11,7 +13,7 @@ chart:
         color: 'red'
       title:
         display: true
-        text: 'Wykres Tstowy 2024.04.21 '
+        text: 'Dodanie danych do bazy  2024.04.27 '
         color: 'blue'
         font:
           weight: 'bold'
@@ -66,3 +68,5 @@ chart:
           tickColor: 'red'
 #          borderColor: 'red'
           offset: true
+
+          # CHartJS 3.6.0
