--- a/pom.xml
+++ b/pom.xml
@@ -156,11 +156,19 @@
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/org.webjars/chartjs -->
+<!--		<dependency>-->
+<!--			<groupId>org.webjars</groupId>-->
+<!--			<artifactId>chartjs</artifactId>-->
+<!--			<version>3.6.0</version>-->
+<!--		</dependency>-->
+
+		<!-- https://mvnrepository.com/artifact/org.webjars/chartjs -->
 		<dependency>
 			<groupId>org.webjars</groupId>
 			<artifactId>chartjs</artifactId>
-			<version>3.6.0</version>
+			<version>4.1.2</version>
 		</dependency>
+
 
 		<!-- https://mvnrepository.com/artifact/org.yaml/snakeyaml -->
 		<dependency>
