--- a/pom.xml
+++ b/pom.xml
@@ -156,18 +156,18 @@
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/org.webjars/chartjs -->
-<!--		<dependency>-->
-<!--			<groupId>org.webjars</groupId>-->
-<!--			<artifactId>chartjs</artifactId>-->
-<!--			<version>3.6.0</version>-->
-<!--		</dependency>-->
-
-		<!-- https://mvnrepository.com/artifact/org.webjars/chartjs -->
 		<dependency>
 			<groupId>org.webjars</groupId>
 			<artifactId>chartjs</artifactId>
-			<version>4.1.2</version>
+			<version>3.6.0</version>
 		</dependency>
+
+<!--		&lt;!&ndash; https://mvnrepository.com/artifact/org.webjars/chartjs &ndash;&gt;-->
+<!--		<dependency>-->
+<!--			<groupId>org.webjars</groupId>-->
+<!--			<artifactId>chartjs</artifactId>-->
+<!--			<version>4.1.2</version>-->
+<!--		</dependency>-->
 
 
 		<!-- https://mvnrepository.com/artifact/org.yaml/snakeyaml -->
