--- a/src/main/resources/static/reportsChart/reports/my_report_continents_test.yml
+++ b/src/main/resources/static/reportsChart/reports/my_report_continents_test.yml
@@ -9,6 +9,13 @@ chart:
     borderColor: 'black'
     hoverBackgroundColor: ['rgb(39, 122, 205)', 'rgb(0, 0, 0)', 'rgb(243, 248, 98)', 'rgb(221, 12, 23)', 'rgb(229, 184, 70)', 'rgb(30, 201, 27)', 'rgb(160, 160, 160)']
   options:
+    animations:
+      tension:
+        duration: 1000
+        easing: 'linear'
+        from: 1
+        to: 0
+        loop: true
     plugins:
       customCanvasBackgroundColor:
         color: 'red'
