--- a/src/main/resources/static/reportsChart/reports/my_report_note_bought.yml
+++ b/src/main/resources/static/reportsChart/reports/my_report_note_bought.yml
@@ -25,7 +25,7 @@ chart:
           size: 30
       legend:
 #        Wyświetlanie legeny
-        display: false
+        display: true
         labels:
           color: 'black'
           font:
