--- a/src/main/resources/static/reportsChart/reports/my_report_object_status.yml
+++ b/src/main/resources/static/reportsChart/reports/my_report_object_status.yml
@@ -28,7 +28,7 @@ chart:
           size: 30
       legend:
 #        Wyświetlanie legeny
-        display: false
+        display: true
         labels:
           color: 'black'
           font:
