--- a/src/main/resources/static/reportsChart/reports/my_report_notes_add.yml
+++ b/src/main/resources/static/reportsChart/reports/my_report_notes_add.yml
@@ -13,7 +13,7 @@ chart:
         color: 'red'
       title:
         display: true
-        text: 'Wykres Tstowy 2024.04.21 '
+        text: 'Czas dodania do bazy danych Banknotów'
         color: 'blue'
         font:
           weight: 'bold'
