Poprawki edycji coins

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,3 +27,8 @@ spring.pid.fail-on-write-error = true
 info.app.name=@project.artifactId@
 info.app.version=@project.version@
 info.app.java=@java.version@
+info.app.description=@project.description@
+info.java-vendor = @java.specification.vendor@
+info.maven.version=@maven-antrun-plugin.version@
+info.postgresql.version=@postgresql.version@
+info.build.version=@project.version@
